@@ -3,3 +3,4 @@ contributor
 predecessor
 similar
 successor
+update_frequency
