@@ -1,3 +1,6 @@
+2009-04-10 nicolas
+* add update_frequency base category
+
 2009-03-24 fabien
 * some method need to be renamed after been moved so change the name everywhere
 
